# aitios-cli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  run.rs
src/app/: mod.rs  run.rs
src/bencher/: bencher.rs  benchmark.rs  mod.rs  msg.rs
src/builder/: append.rs  builder.rs  canonicalize.rs  err.rs  instantiate.rs  mod.rs
src/files/: mod.rs  recursive.rs  resolv.rs  timestamp.rs
src/runner/: load.rs  mod.rs  runner.rs  surfel_table_cache.rs
src/runner/load/: err.rs  load.rs  mod.rs
src/spec/: bench.rs  effect.rs  mod.rs  sim.rs  source.rs  surfel.rs  transport.rs
tests/examples/: concrete.yml  iron.yml  rain.yml  simulation.yml
