[package]
name = "aitios-cli"
version = "0.1.0"
authors = ["krachzack <hello@phstadler.com>"]

[dependencies]
clap = "2.31"
chrono = "0.4"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4"
simplelog = "0.5"
serde = "1.0"
rayon = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
aitios-geom = { git = "https://github.com/krachzack/aitios-geom.git" }
aitios-asset = { git = "https://github.com/krachzack/aitios-asset.git" }
aitios-scene = { git = "https://github.com/krachzack/aitios-scene.git" }
aitios-sim = { git = "https://github.com/krachzack/aitios-sim.git" }
aitios-surf = { git = "https://github.com/krachzack/aitios-surf.git" }
aitios-tex = { git = "https://github.com/krachzack/aitios-tex.git" }
